New script to broaden simulated EELS data

--- a/random_AlGdN.ipynb
+++ b/random_AlGdN.ipynb
@@ -416,7 +416,7 @@
      "output_type": "stream",
      "text": [
       "Simulating...\n",
-      "[#######################                 ] | 59% Completed | 16hr 54m"
+      "[#################################       ] | 84% Completed | 23hr 44m"
      ]
     }
    ],
