Minor changes (variable rename & gteq->gt)

--- a/random_AlGdN.ipynb
+++ b/random_AlGdN.ipynb
@@ -416,7 +416,7 @@
      "output_type": "stream",
      "text": [
       "Simulating...\n",
-      "[                                        ] | 2% Completed | 71m 36sss"
+      "[##                                      ] | 7% Completed | 3hr 14mss"
      ]
     }
    ],
