Made tk_popover importable
Reduce the amount of copy-pasting between scripts

--- a/random_AlGdN_analysis.ipynb
+++ b/random_AlGdN_analysis.ipynb
@@ -16,51 +16,15 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tkinter import Tk\n",
-    "from tkinter.filedialog import askopenfilename, asksaveasfilename\n",
     "import numpy as np\n",
     "import abtem\n",
     "import tifffile\n",
     "import json\n",
     "import SingleOrigin as so\n",
     "from matplotlib import pyplot as plt\n",
-    "from contextlib import contextmanager\n",
-    "from os import devnull\n",
-    "import sys\n",
     "import copy\n",
     "import scipy\n",
-    "\n",
-    "\n",
-    "def tk_popover(save: bool = False, **kwargs):\n",
-    "    \"\"\"Tk helper to ensure window appears on top.\"\"\"\n",
-    "    root = Tk()\n",
-    "    root.iconify()\n",
-    "    root.attributes('-topmost', True)\n",
-    "    root.update()\n",
-    "    loc = None  # Default return if open fails; will likely cause an error when passed along\n",
-    "    try:\n",
-    "        if not save:\n",
-    "            loc = askopenfilename(parent=root, **kwargs)\n",
-    "        else:\n",
-    "            loc = asksaveasfilename(parent=root, **kwargs)\n",
-    "\n",
-    "    finally:\n",
-    "        root.attributes('-topmost', False)\n",
-    "        root.destroy()\n",
-    "    return loc\n",
-    "\n",
-    "\n",
-    "@contextmanager\n",
-    "def suppress_stdout():  # SingleOrigin prints to stdout a lot, this keeps things a bit tidier\n",
-    "    \"\"\"Context manager to suppress printing to stdout by piping into devnull; by Dave Smith:\n",
-    "    https://thesmithfam.org/blog/2012/10/25/temporarily-suppress-console-output-in-python/\"\"\"\n",
-    "    with open(devnull, \"w\") as dn:\n",
-    "        old_stdout = sys.stdout\n",
-    "        sys.stdout = dn\n",
-    "        try:\n",
-    "            yield\n",
-    "        finally:\n",
-    "            sys.stdout = old_stdout\n",
+    "from utils import tk_popover, suppress_stdout\n",
     "\n",
     "\n",
     "def minmax_norm(img):\n",
