--- a/wurtzite_n_shift.ipynb
+++ b/wurtzite_n_shift.ipynb
@@ -17,8 +17,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tkinter import Tk\n",
-    "from tkinter.filedialog import askopenfilename, asksaveasfilename\n",
+    "from utils import tk_popover\n",
     "\n",
     "import abtem\n",
     "import numpy as np\n",
@@ -40,38 +39,6 @@
     }
    },
    "id": "99e3ee9f45263488"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "def tk_popover(save: bool = False, **kwargs):\n",
-    "    \"\"\"Tk helper to ensure window appears on top.\"\"\"\n",
-    "    root = Tk()\n",
-    "    root.iconify()\n",
-    "    root.attributes('-topmost', True)\n",
-    "    root.update()\n",
-    "    loc = None  # Default return if open fails; will likely cause an error when passed along\n",
-    "    try:\n",
-    "        if not save:\n",
-    "            loc = askopenfilename(parent=root, **kwargs)\n",
-    "        else:\n",
-    "            loc = asksaveasfilename(parent=root, **kwargs)\n",
-    "            \n",
-    "    finally:\n",
-    "        root.attributes('-topmost', False)\n",
-    "        root.destroy()\n",
-    "    return loc"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-03T18:37:33.529096400Z",
-     "start_time": "2024-12-03T18:37:33.523095500Z"
-    }
-   },
-   "id": "694b294d80bad58d"
   },
   {
    "cell_type": "markdown",
@@ -603,7 +570,7 @@
     "vpcf_ax.get_yaxis().set_visible(False)\n",
     "\n",
     "# DO NOT close the plot window first, or an error will be thrown\n",
-    "savedir = Path(asksaveasfilename(defaultextension=\".png\"))\n",
+    "savedir = tk_popover(save=True, defaultextension=\".png\")\n",
     "if savedir == Path(\".\"):\n",
     "    pass  # Don't save to \".\", it usually means file dialog was canceled or closed\n",
     "else:\n",
