--- a/random_AlGdN_simulation.ipynb
+++ b/random_AlGdN_simulation.ipynb
@@ -16,8 +16,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tkinter import Tk\n",
-    "from tkinter.filedialog import askopenfilename, asksaveasfilename\n",
+    "from utils import tk_popover\n",
     "\n",
     "import abtem\n",
     "import numpy as np\n",
@@ -39,38 +38,6 @@
     }
    },
    "id": "b4acc8161541fff0"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "def tk_popover(save: bool = False, **kwargs):\n",
-    "    \"\"\"Tk helper to ensure window appears on top.\"\"\"\n",
-    "    root = Tk()\n",
-    "    root.iconify()\n",
-    "    root.attributes('-topmost', True)\n",
-    "    root.update()\n",
-    "    loc = None  # Default return if open fails; will likely cause an error when passed along\n",
-    "    try:\n",
-    "        if not save:\n",
-    "            loc = askopenfilename(parent=root, **kwargs)\n",
-    "        else:\n",
-    "            loc = asksaveasfilename(parent=root, **kwargs)\n",
-    "\n",
-    "    finally:\n",
-    "        root.attributes('-topmost', False)\n",
-    "        root.destroy()\n",
-    "    return loc"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-02-24T18:14:11.170669Z",
-     "start_time": "2025-02-24T18:14:11.162645300Z"
-    }
-   },
-   "id": "d2757d97e47bede3"
   },
   {
    "cell_type": "markdown",
