Fix default value in tk_popover
Accidentally set default open_many to true; fixed now

--- a/fp_convergence.ipynb
+++ b/fp_convergence.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "execution_count": 1,
+   "id": "da0f26ff3d6424ef",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-03-31T17:09:30.785762100Z",
+     "start_time": "2025-03-31T17:09:28.330601900Z"
+    }
    },
    "outputs": [],
    "source": [
     "from ase import io as aio\n",
     "from sim_stem import simulate_stem, preview_stem_result\n",
-    "from tk_popover import tk_popover\n",
-    "\n",
-    "aio.read(...)\n"
+    "from utils import tk_popover"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "cif = aio.read(tk_popover())"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b62a6cf90dfb20a1"
   }
  ],
  "metadata": {
